# OpenCV

./: README.md  test.py
Book/LearningOpenCV3/Example2-1/src/: main.cpp
Book/LearningOpenCV3/Example2-2/src/: CMakeLists.txt  main.cpp
Book/LearningOpenCV3/Example2-4/src/: CMakeLists.txt  main.cpp
Book/LearningOpenCV3/Example2-5/src/: example2_5.cpp  main.cpp
Book/LearningOpenCV3/chapter12/DFT/: fdt.cpp
Book/LearningOpenCV3/chapter2/canny/: main.cpp
Book/LearningOpenCV3/chapter2/helloOpenCV/: main.cpp
Book/LearningOpenCV3/chapter9/displayImage/: main.cpp
BookSrc/LearningOpenCV3/Example2-1/src/: CMakeLists.txt
BookSrc/LearningOpenCV3/Example2-11/data/: video.avi
BookSrc/LearningOpenCV3/Example2-11/src/: main.cpp
BookSrc/LearningOpenCV3/Example2-2/: CMakeLists.txt
BookSrc/LearningOpenCV3/Example2-3/: CMakeLists.txt
BookSrc/LearningOpenCV3/Example2-3/src/: main.cpp
BookSrc/LearningOpenCV3/Example2-5/: CMakeLists.txt
BookSrc/LearningOpenCV3/Example2-5/include/: example2_5.h
BookSrc/LearningOpenCV3/Example2-5/src/: CMakeLists.txt  example2_5.cpp
BookSrc/LearningOpenCV3/Example2-6/src/: CMakeLists.txt  main.cpp
BookSrc/LearningOpenCV3/Example2-7/: CMakeLists.txt
BookSrc/LearningOpenCV3/Example2-7/src/: CMakeLists.txt  main.cpp
BookSrc/LearningOpenCV3/Example5-1/: Example5-1.pro  main.cpp
BookSrc/LearningOpenCV3/chapter10/adaptiveBinaryThreshold/: adaptiveBinaryThreshold.pro  main.cpp
BookSrc/LearningOpenCV3/chapter12/DFT/: DFT.pro
BookSrc/LearningOpenCV3/chapter2/Video/: Video.pro
BookSrc/LearningOpenCV3/chapter2/helloOpenCV/: helloOpenCV.pro
BookSrc/LearningOpenCV3/chapter2/trackbar/: trackbar.pro
BookSrc/learnOpenCV/AlphaBlending/: CMakeLists.txt
BookSrc/learnOpenCV/AlphaBlending/src/: CMakeLists.txt  alphaBlend.cpp
BookSrc/learnOpenCV/EigenFace/: CMakeLists.txt
BookSrc/learnOpenCV/EigenFace/src/: CMakeLists.txt
BookSrc/learnOpenCV/qt-test/: CMakeLists.txt
BookSrc/learnOpenCV/qt-test/src/: CMakeLists.txt
OpenCVDoc/pdf/: Makefile  OpenCV.aux  OpenCV.out  OpenCV.tex  OpenCV.toc
OpenCVDoc/pdf/appendix/: appendix.aux
OpenCVDoc/pdf/auto/: OpenCV.el
OpenCVDoc/pdf/chapter01/: chapter01.aux  chapter01.tex
OpenCVDoc/pdf/chapter08/: chapter08.tex
OpenCVDoc/pdf/chapter08/auto/: chapter08.el
OpenCVDoc/pdf/setup/: setup.aux  setup.tex
OpenCVDoc/pdf/setup/auto/: setup.el
SelfProject/GLCM-OpenCV/: glcm.cpp  main.cpp
SelfProject/LoopPixel/: README.md
SelfProject/LoopPixel/src/: CMakeLists.txt  iter.cpp  main.cpp  ptr.cpp
SelfProject/OpenCV2Qt/: .qmake.stash  Mat2QImage.cpp
SelfProject/WriteVideo/src/: CMakeLists.txt  main.cpp
SelfProject/createTestPicture/: createTestPicture.pro  main.cpp
chapter1/showImage/: main.cpp
chapter2/2-1/: 2-1.cpp  Makefile  README.org
chapter2/2-3/: 2-3.cpp  Makefile
chapter2/2-6/: 2-6.cpp  Makefile
chapter2/Video/: .qmake.stash  Makefile  Video  main.cpp
chapter2/camera/: main.cpp
chapter2/camera/Debug/: Makefile  camera
chapter2/canny/: Makefile  canny
chapter2/trackbar/: Makefile  main.cpp  trackbar
chapter2/trackbar/Debug/: Makefile  trackbar
chapter2/transformation/: Makefile  main.cpp  transformation
chapter4/access_at/: access_at.pro  main.cpp
chapter4/access_at/Debug/: Makefile  access_at
chapter9/displayImage/Debug/: Makefile  displayImage
doc/pdf/: compileAndLook.py
doc/pdf/appendix/: appendix.tex
doc/pdf/chapter01/: chapter01.aux  chapter01.tex
doc/pdf/chapter08/: chapter08.aux
doc/pdf/setup/: setup.aux  setup.tex
